<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_stash"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_quick_stash_short"
        android:shortcutLongLabel="@string/shortcut_quick_stash_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.tuck.app"
            android:targetClass="com.tuck.app.ui.MainActivity">
            <extra android:name="EXTRA_OPEN_QUICK_ADD" android:value="true" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="search_vault"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.tuck.app"
            android:targetClass="com.tuck.app.ui.MainActivity">
            <extra android:name="EXTRA_OPEN_SEARCH" android:value="true" />
        </intent>
    </shortcut>
</shortcuts>
